data/derived/fa15/progs/unify/prog2623.ml.out
Characters 86-88:
  | Sine e' -> sin (pi * e')
                    ^^
Error: This expression has type float but an expression was expected of type
         int
